# osmo-bsc

./: .gitignore  .gitreview  Makefile.am  README  README.md  TODO-RELEASE  configure.ac  osmo-bsc.pc.in  osmoappdesc.py
debian/: rules  (+11 more)
doc/: Makefile.am  assignment-fsm.dot  assignment.msc  bts-features.txt  codec_resolution.ladder  codec_resolution.msc  e1-data-model.txt  handover-inter-bsc-in-fsm.dot  handover-inter-bsc-in.msc  handover-inter-bsc-mo.msc  handover-inter-bsc-mt.msc  handover-inter-bsc-out-fsm.dot  handover-inter-bsc-out.msc  handover-intra-bsc-fsm.dot  handover.msc  handover.txt  lchan-fsm.dot  lchan-release.msc  lchan-rtp-fsm.dot  lchan.msc  legend_for_fsm_diagrams.dot  legend_for_ladder_diagrams.msc  location_services_fsm_bsc.dot  location_services_ta.ladder  location_services_ta2.ladder  mgw-endpoint-fsm.dot  mgw-endpoint.msc  ms-channel-request.msc  mscpool-attach.dot  timeslot-fsm.dot  timeslot.msc  ts-and-lchan-fsm-lifecycle.msc
doc/examples/: Makefile.am
doc/manuals/: Makefile  Makefile.am  aoip-mgw-options-docinfo.xml  aoip-mgw-options.adoc  osmobsc-cbsp-docinfo.xml  osmobsc-cbsp.adoc  osmobsc-usermanual-docinfo.xml  osmobsc-usermanual.adoc  osmobsc-vty-reference.xml  osmux-reference-docinfo.xml  osmux-reference.adoc  regen_doc.sh
src/: Makefile.am
src/gprs/: sgsn_vty.c
src/ipaccess/: Makefile.am  abisip-find.c  ipaccess-config-e1-driver.c  ipaccess-config.c  ipaccess-firmware.c  ipaccess-proxy.c  network_listen.c  stubs.c
src/libbsc/: Makefile.am  a_reset.c  abis_nm.c  abis_nm_vty.c  abis_om2000.c  abis_om2000_vty.c  abis_rsl.c  acc_ramp.c  arfcn_range_encode.c  bsc_api.c  bsc_ctrl_commands.c  bsc_ctrl_lookup.c  bsc_dyn_ts.c  bsc_init.c  bsc_msc.c  bsc_rf_ctrl.c  bsc_rll.c  bsc_subscr_conn_fsm.c  bsc_subscriber.c  bsc_vty.c  bts_ericsson_rbs2000.c  bts_init.c  bts_ipaccess_nanobts.c  bts_ipaccess_nanobts_omlattr.c  bts_nokia_site.c  bts_siemens_bs11.c  bts_sysmobts.c  chan_alloc.c  e1_config.c  gsm_04_08_utils.c  gsm_data.c  handover_cfg.c  handover_decision.c  handover_decision_2.c  handover_logic.c  handover_vty.c  meas_feed.c  meas_proc.c  meas_rep.c  net_init.c  (+5 more)
src/libcommon/: Makefile.am  acc_ramp.c  common_vty.c  debug.c  gsm_data.c  gsm_data_shared.c  gsm_subscriber_base.c  handover_cfg.c  socket.c  talloc_ctx.c
src/libcommon-cs/: Makefile.am  a_reset.c  common_cs.c  common_cs_vty.c
src/libfilter/: Makefile.am  bsc_msg_acc.c  bsc_msg_filter.c  bsc_msg_vty.c
src/libmsc/: Makefile.am  a_iface_bssap.c  gsm_04_08.c
src/libtrau/: rtp_proxy.c  trau_mux.c  trau_upqueue.c
src/osmo-bsc/: Makefile.am  a_reset.c  abis_bs11.c  abis_nm.c  abis_nm_ipaccess.c  abis_nm_vty.c  abis_om2000.c  abis_om2000_vty.c  abis_osmo.c  abis_rsl.c  acc.c  acc_ramp.c  arfcn_range_encode.c  assignment_fsm.c  bsc_api.c  bsc_ctrl.c  bsc_ctrl_commands.c  bsc_ctrl_lookup.c  bsc_dyn_ts.c  bsc_init.c  bsc_rf_ctrl.c  bsc_sccp.c  bsc_stats.c  bsc_subscr_conn_fsm.c  bsc_subscriber.c  bsc_vty.c  bssmap_reset.c  bts.c  bts_ctrl.c  bts_ericsson_rbs2000.c  bts_init.c  bts_ipaccess_nanobts.c  bts_ipaccess_nanobts_omlattr.c  bts_nokia_site.c  bts_osmobts.c  bts_setup_ramp.c  bts_siemens_bs11.c  bts_sm.c  bts_sysmobts.c  bts_trx.c  (+76 more)
src/osmo-bsc_nat/: Makefile.am  bsc_filter.c  bsc_mgcp_utils.c  bsc_nat.c  bsc_nat_ctrl.c  bsc_nat_filter.c  bsc_nat_rewrite.c  bsc_nat_rewrite_trie.c  bsc_nat_utils.c  bsc_nat_vty.c  bsc_sccp.c  bsc_ussd.c
src/osmo-msc/: msc_main.c
src/utils/: Makefile.am  bs11_config.c  meas_db.c  meas_db.h  meas_json.c  meas_pcap2db.c  meas_udp2db.c  meas_vis.c  stubs.c
tests/: Makefile.am  acc.vty  acch_overpower.vty  bts_features.vty  cbc.vty  ctrl_test_runner.py  early_ia.vty  gprs_bvci_default.vty  gprs_params.vty  handover_cfg.vty  interf_meas.vty  msc.vty  neighbor_ident.vty  nri_cfg.vty  osmo-bsc.vty  osmo-bsc.vty_unfinished  power_ctrl.vty  si2quater_neighbor_list.vty  smlc.vty  testsuite.at  timer.vty  timeslot.vty  vty_test_runner.py
tests/abis/: Makefile.am  abis_test.c  abis_test.ok
tests/acc/: Makefile.am  acc_test.c  acc_test.ok
tests/bsc/: Makefile.am  bsc_test.c  bsc_test.ok
tests/bsc-nat/: Makefile.am  bsc_nat_test.c
tests/bsc-nat-trie/: Makefile.am  bsc_nat_trie_test.c
tests/bssap/: Makefile.am  bssap_test.c  bssap_test.err
tests/channel/: Makefile.am  channel_test.c
tests/codec_pref/: Makefile.am  codec_pref_test.c  codec_pref_test.ok
tests/ctrl/: osmo-bsc-apply-config-file-invalid.cfg  osmo-bsc-apply-config-file.cfg  osmo-bsc-neigh-test.cfg
tests/gsm0408/: Makefile.am  gsm0408_test.c  gsm0408_test.ok
tests/handover/: Makefile.am  handover_test.c  handover_tests.ok  handover_tests.sh  neighbor_ident_test.c  neighbor_ident_test.ok  test0002.ho_vty  test0003.ho_vty  test0004.ho_vty  test0005.ho_vty  test0006.ho_vty  test0007.ho_vty  test0008.ho_vty  test0016.ho_vty  test0018.ho_vty  test0020.ho_vty  test0022.ho_vty  test0029.ho_vty  test0030.ho_vty  test_ahs_to_afs_bias.ho_vty  test_amr_oscillation.ho_vty  test_amr_tch_f_to_h_balance_congestion.ho_vty  test_amr_tch_f_to_h_congestion_assignment.ho_vty  test_amr_tch_f_to_h_congestion_assignment_2.ho_vty  test_amr_tch_f_to_h_congestion_assignment_3.ho_vty  test_amr_tch_h_and_afs_bias.ho_vty  test_amr_tch_h_to_f_congestion.ho_vty  test_amr_tch_h_to_f_congestion_two_cells.ho_vty  test_amr_tch_h_to_f_rxlev.ho_vty  test_amr_tch_h_to_f_rxlev_congested.ho_vty  test_amr_tch_h_to_f_rxlev_oscillation.ho_vty  test_amr_tch_h_to_f_rxqual.ho_vty  test_amr_tch_h_to_f_rxqual_congested.ho_vty  test_amr_tch_h_to_f_rxqual_oscillation.ho_vty  test_balance_congestion.ho_vty  test_balance_congestion_2.ho_vty  test_balance_congestion_by_percentage.ho_vty  test_balance_congestion_tchf_tchh.ho_vty  test_bs_power.ho_vty  test_congestion.ho_vty  (+35 more)
tests/msc_vlr/: msc_vlr_tests.c
tests/nanobts_omlattr/: Makefile.am  nanobts_omlattr_test.c  nanobts_omlattr_test.ok
tests/paging/: Makefile.am  paging_test.c  paging_test.ok
tests/subscr/: Makefile.am  bsc_subscr_test.c  bsc_subscr_test.err  bsc_subscr_test.ok
tests/time_cc/: Makefile.am  time_cc_test.c
tests/trau/: Makefile.am  trau_test.c
(+167 files in other folders)
